# TRIDENT-2021-SIM

./: .gitignore  .gitmodules  README.md  extractor.py  tags
athena_description/: CMakeLists.txt  package.xml
athena_description/launch/: athena_description.launch
athena_description/urdf/: core.urdf.xacro  payload.urdf.xacro
blender/: NAIAD_model.blend
cola2_athena/: CMakeLists.txt  package.xml
cola2_athena/launch/: bag.launch  play_bag.launch  sim_configuration.launch  sim_start.launch  sim_velocity_from_dynamics.launch
cola2_athena/missions/: mission_test.xml
cola2_athena/scene/: naiad.rviz
cola2_athena/sim_config/: default_param_handler.yaml  diagnostic_aggregator.yaml  logitech_fx10_to_teleoperation.yaml
cola2_core/: CHANGELOG.md
cola2_core/cola2_comms/: README.md  package.xml
cola2_core/cola2_comms/src/: comms_node.cpp
cola2_core/cola2_control/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_control/config/: controller.yaml  teleoperation.yaml
cola2_core/cola2_control/launch/: control.launch
cola2_core/cola2_control/src/: captain_node.cpp  keyboard_node.cpp  keyboard_to_teleoperation_node.py  logitech_fx10_to_teleoperation_node.py  open_loop_node.cpp  pilot_node.cpp  teleoperation_node.py
cola2_core/cola2_control/test/: test_thrusters.py
cola2_core/cola2_core/: package.xml
cola2_core/cola2_log/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_log/config/: default_param_handler.yaml
cola2_core/cola2_log/launch/: log.launch
cola2_core/cola2_nav/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_safety/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_sim/: README.md  package.xml
cola2_girona500/: CMakeLists.txt  package.xml
cola2_girona500/launch/: basic_bag.launch  sim_configuration.launch  sim_core.launch  sim_velocity_from_dynamics.launch
cola2_girona500/sim_config/: logitech_fx10_to_teleoperation.yaml
cola2_lib/: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  bitbucket-pipelines.yml  setup.py.in
cola2_lib/cmake/: COLA2_LIBConfig.cmake.in  COLA2_LIBConfigVersion.cmake.in  COLA2_LIBDependencies.cmake  uninstall_target.cmake.in
cola2_lib/doc/: Doxyfile  Makefile  README.md  conf.py  doxygen_back.md
cola2_lib/doc/html/: index.html
cola2_lib/docker/: Dockerfile1804  Dockerfile2004
cola2_lib/include/cola2_lib/comms/: altitude.h  elapsed_time.h
cola2_lib/include/cola2_lib/io/: io_base.h  nmea_parser.h  serial_port.h  tcp_socket.h  udp_socket.h
cola2_lib/include/cola2_lib/mission/: mission.h  mission_action.h  mission_goto.h  mission_maneuver.h  mission_park.h  mission_section.h  mission_step.h
cola2_lib/include/cola2_lib/utils/: angles.h  error_macro.h  filesystem.h  ned.h  pressure.h  saturate.h  thread_pool.h  thread_safe_flag.h
cola2_lib/include/cola2_lib/wmm/: magnetic_declination.h
cola2_lib/include/cola2_lib/wmmc/: GeomagnetismHeader.h  magnetic_declination.h
cola2_lib/python/cola2/: __init__.py
cola2_lib/python/cola2/comms/: __init__.py  altitude.py.in  elapsed_time.py.in
cola2_lib/python/cola2/io/: nmea_parser.py
cola2_lib/python/cola2/mission/: mission_types.py  mission_types_v1.py
cola2_lib/python/cola2/utils/: __init__.py  angles.py  ned.py  saturate.py
cola2_lib/python/cola2/wmm/: wmm.py.in
cola2_lib/src/cola2_lib/comms/: altitude.c  elapsed_time.c
cola2_lib/src/cola2_lib/io/: io_base.cpp  nmea_parser.cpp  serial_port.cpp  tcp_socket.cpp  udp_socket.cpp
cola2_lib/src/cola2_lib/mission/: mission.cpp  mission_action.cpp  mission_goto.cpp  mission_maneuver.cpp  mission_park.cpp  mission_section.cpp  mission_step.cpp
cola2_lib/src/cola2_lib/utils/: angles.cpp  filesystem.cpp  ned.cpp  pressure.cpp  saturate.cpp  thread_safe_flag.cpp
cola2_lib/src/cola2_lib/wmm/: magnetic_declination.cpp
cola2_lib/src/cola2_lib/wmmc/: GeomagnetismLibrary.c  magnetic_declination.c
cola2_lib_ros/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
cola2_lib_ros/doc/: README.md  conf.py
cola2_msgs/: CHANGELOG.md  CMakeLists.txt  package.xml
cola2_naiad/: CHANGELOG.md  CMakeLists.txt  package.xml
cola2_naiad/launch/: play_bag.launch  sim_configuration.launch  sim_start.launch  sim_velocity_from_dynamics.launch
cola2_naiad/missions/: mission_test.xml
cola2_naiad/scene/: naiad.rviz
cola2_naiad/sim_config/: captain.yaml  default_param_handler.yaml  logitech_fx10_to_teleoperation.yaml  safety_supervisor.yaml
cola2_stonefish/: CMakeLists.txt  package.xml
cola2_stonefish/data/naiad/: batteryTubes
cola2_stonefish/launch/: athena_simulation.launch  athena_tank_simulation.launch  girona500_tank_simulation.launch  girona500_valve_turning_simulation.launch  naiad_simulation.launch  naiad_tank_simulation.launch  sparus2_tank_simulation.launch  trident_simulation.launch
cola2_stonefish/scenarios/: athena.scn  athena_tank.scn  girona500.scn  girona500_eca5emicro.scn  naiad.scn  naiad_tank.scn  sparus2.scn  trident.scn
cola2_stonefish/urdf/: girona500_eca5emicro_vgripper.urdf.xarco
girona500_description/: CMakeLists.txt  package.xml
girona500_description/meshes/: naiad.dae
naiad_description/: CHANGELOG.md  CMakeLists.txt  package.xml
naiad_description/launch/: naiad_description.launch
naiad_description/urdf/: core.urdf.xacro  payload.urdf.xacro
stonefish_ros/: CMakeLists.txt  package.xml  stonefish_ros.rosinstall
stonefish_ros/cmake/: FindBullet.cmake
stonefish_ros/include/stonefish_ros/: ROSInterface.h  ROSScenarioParser.h  ROSSimulationManager.h
stonefish_ros/launch/: simulator.launch
stonefish_ros/src/: ROSInterface.cpp  ROSScenarioParser.cpp  ROSSimulationManager.cpp  parsed_simulator.cpp  parsed_simulator_nogpu.cpp  tags
trident_sim/: CMakeLists.txt  README.md  package.xml
trident_sim/launch/: athena_simulation.launch  naiad_simulation.launch  trident_simulation.launch
trident_sim/scenarios/: athena.scn  athena_ocean.scn  athena_tank.scn  naiad.scn  naiad_nocam.scn  naiad_ocean.scn  naiad_ocean_nocam.scn  trident.scn  trident_nocam.scn
usv_sim_lsa/.usv_sim_ci_config/: dependencies.sh
(+66 files in other folders)
