<?xml version="1.0"?>
<package format="2">
  <name>cola2_athena</name>
  <version>20.10.0</version>
  <description>The cola2_athena package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>rosbridge_server</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>
  <depend>rviz</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>joy</depend>

  <!-- COLA2 Dependencies -->
  <depend>athena_description</depend>
</package>
