<?xml version="1.0"?>
<package format="2">
  <name>cola2_girona500</name>
  <version>20.10.0</version>
  <description>The cola2_girona500 package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>rosbridge_server</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>
  <depend>rviz</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>joy</depend>

  <!-- COLA2 Dependencies -->
  <depend>girona500_description</depend>
</package>
