<?xml version="1.0"?>
<package format="2">
	<name>cola2_stonefish</name>
	<version>1.0.0</version>
	<description>The cola2_stonefish package</description>
	<author email="patryk.cieslak@udg.edu">Patryk Cieslak</author>
	<maintainer email="patryk.cieslak@udg.edu">Patryk Cieslak</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>stonefish_ros</depend>
	<depend>cola2_msgs</depend>
</package>