<?xml version="1.0"?>
<package format="2">
  <name>naiad_description</name>
  <version>20.10.0</version>
  <description>The naiad_description package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- COLA2 Dependencies -->
  <depend>cola2_lib_ros</depend>
</package>
