<?xml version="1.0"?>
<package format="2">
	<name>trident_sim</name>
	<version>1.0.0</version>
	<description>The Trident simulation package</description>
	<author email="fst17001@student.mdh.se">Felix Sjoqvist</author>
	<maintainer email="fst17001@student.mdh.se">Felix Sjoqvist</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>stonefish_ros</depend>
	<depend>cola2_msgs</depend>
</package>